--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/need_blue2"
+        android:background="#2E7AFB"
         android:elevation="10dp"
         android:theme="@style/Theme.LENGOchatApp"
         app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
@@ -22,7 +22,7 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/need_blue"
+        android:background="@color/need_blue2"
         android:elevation="10dp"
         app:tabIndicatorColor="@android:color/white"
         app:tabSelectedTextColor="@android:color/white"
