--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -81,7 +81,7 @@
                     app:layout_constraintEnd_toStartOf="@+id/TextView"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@string/lengo" />
+                    app:srcCompat="@drawable/logo" />
 
                 <TextView
                     android:id="@+id/TextView"
