--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".SplashScreen">
 
-    <ImageView
+    <!--<ImageView
         android:id="@+id/logo"
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -15,8 +15,7 @@
         app:layout_constraintEnd_toStartOf=""
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.451"
-        />
+        app:layout_constraintVertical_bias="0.451" />-->
 
     <TextView
         android:id="@+id/TextView"
@@ -31,7 +30,6 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/logo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.439" />
 
