--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="litherGray">#a1a1a1</color>
     <color name="green">#388E3C</color>
     <color name="red">#D32F2F</color>
+    <color name="need_blue2">#2E7AFB</color>
 
 
     <array name="random_color">
