--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -76,9 +76,11 @@
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeToLoad"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="704dp"
         android:layout_above="@id/inputBox"
-        android:layout_below="@+id/toolbar">
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="-4dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/msgRv"
