--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -94,6 +94,7 @@
                     android:adjustViewBounds="true"
                     android:clickable="true"
                     android:focusable="true"
+                    android:contextClickable="true"
                     android:scaleType="centerCrop"
                     android:src="@drawable/defaulavatar"
                     app:shapeAppearanceOverlay="@style/RoundedImageView"
@@ -306,15 +307,14 @@
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/logo"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginStart="85dp"
+                android:id="@+id/logoz"
+                android:layout_width="120dp"
+                android:layout_height="121dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="32dp"
                 android:contentDescription="@drawable/logo"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/TextView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                 app:layout_constraintVertical_bias="0.41000003"
@@ -325,7 +325,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:layout_marginEnd="85dp"
                 android:layout_marginBottom="32dp"
                 android:text="@string/app_name"
                 android:textAlignment="center"
@@ -333,8 +332,7 @@
                 android:textSize="44sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/logo"
+                app:layout_constraintStart_toEndOf="@+id/logoz"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                 app:layout_constraintVertical_bias="0.9" />
 
