--- a/app/src/main/res/layout/list_item_chat_recv_message.xml
+++ b/app/src/main/res/layout/list_item_chat_recv_message.xml
@@ -15,34 +15,40 @@
         android:id="@+id/messageCardView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#8452EA"
+        app:cardBackgroundColor="@color/purple_500"
         app:elevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearance="@style/CustomMediumShapeAppearance">
 
+        <com.google.android.flexbox.FlexboxLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            app:alignItems="flex_end"
+            app:flexWrap="wrap"
+            app:justifyContent="flex_end">
 
             <TextView
                 android:id="@+id/content"
-                android:layout_width="61dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:lineSpacingExtra="5dp"
-                android:textAlignment="gravity"
-                android:textColor="@android:color/white"
+                android:textColor="#FFFFFF"
                 android:textSize="16sp"
-                tools:text="Hello"/>
+                tools:text="Hello" />
 
             <TextView
                 android:id="@+id/time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top|right"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textColor="#A6ffffff"
-                android:textSize="7sp"
-                tools:ignore="SmallSp"
+                android:layout_marginStart="16dp"
+                android:textColor="#858585"
+                android:textSize="14sp"
                 tools:text="12:00 AM" />
+
+        </com.google.android.flexbox.FlexboxLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
