--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -32,7 +32,7 @@
         android:contentDescription="@drawable/ic_logout"
         android:focusable="true"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/scrollView2"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
         app:srcCompat="@drawable/ic_logout"
         tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
 
@@ -78,10 +78,11 @@
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="4dp"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:context=".auth.SignUpActivity">
@@ -93,12 +94,12 @@
                     android:layout_marginTop="20dp"
                     android:adjustViewBounds="true"
                     android:clickable="true"
-                    android:focusable="true"
                     android:contextClickable="true"
+                    android:focusable="true"
                     android:scaleType="centerCrop"
                     android:src="@drawable/defaulavatar"
                     app:shapeAppearanceOverlay="@style/RoundedImageView"
-                    tools:ignore="SpeakableTextPresentCheck" />
+                    tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
 
                 <EditText
                     android:id="@+id/name"
@@ -108,6 +109,7 @@
                     android:layout_marginStart="30dp"
                     android:layout_marginTop="30dp"
                     android:layout_marginEnd="30dp"
+                    android:autofillHints=""
                     android:background="@drawable/edit_text_background"
                     android:clickable="false"
                     android:elevation="2dp"
@@ -121,8 +123,7 @@
                     android:singleLine="true"
                     android:text="@string/name"
                     android:textSize="20sp"
-                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck"
-                    android:autofillHints="" />
+                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />
 
                 <EditText
                     android:id="@+id/dob"
@@ -132,6 +133,7 @@
                     android:layout_marginStart="30dp"
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="30dp"
+                    android:autofillHints=""
                     android:background="@drawable/edit_text_background"
                     android:clickable="false"
                     android:elevation="2dp"
@@ -145,8 +147,7 @@
                     android:singleLine="true"
                     android:text="@string/dob"
                     android:textSize="20sp"
-                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
-                    android:autofillHints="" />
+                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/status"
@@ -308,33 +309,15 @@
 
             <ImageView
                 android:id="@+id/logoz"
-                android:layout_width="120dp"
-                android:layout_height="121dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginBottom="32dp"
+                android:layout_width="145dp"
+                android:layout_height="150dp"
+                android:layout_marginTop="3dp"
                 android:contentDescription="@drawable/logo"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-                app:layout_constraintVertical_bias="0.41000003"
                 app:srcCompat="@drawable/logo" />
-
-            <TextView
-                android:id="@+id/TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:layout_marginBottom="32dp"
-                android:text="@string/app_name"
-                android:textAlignment="center"
-                android:textColor="@color/bluish_black"
-                android:textSize="44sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/logoz"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-                app:layout_constraintVertical_bias="0.9" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
